# Ecommerce

./: .env  .gitignore  build.sh  db.sqlite3  manage.py  migrate.sh  nohup.out  pyproject.toml  render-build.sh  render.yaml  requirements.txt  setup.py  wget-log  wget-log.2
app1/: admin.py  models.py  urls.py  views.py
app1/migrations/: 0001_initial.py  0002_signup_alter_signin_email.py  0003_category.py  0004_product.py  0005_userregister_delete_signin_delete_signup.py  0006_userregister_confirmpassword.py  0007_remove_userregister_confirmpassword.py  0008_order.py  0009_order_paytype.py  0010_remove_order_orderid.py  0011_alter_order_datetime.py  0012_alter_order_datetime.py  0013_cart.py  0014_rename_qty_product_stock.py  0015_remove_order_productid_remove_order_userid_and_more.py  0016_alter_order_product_alter_order_user.py  0017_alter_order_transactionid.py  0018_alter_order_product_alter_order_transactionid_and_more.py  0019_alter_order_user.py  0020_order_order_complited_alter_order_datetime.py  0021_rename_datetime_order_order_placed_and_more.py  0022_product_is_approved.py
app1/templates/: add_product.html  cart.html  catpro.html  checkout.html  confirmation.html  confrom.html  details.html  first.html  footer.html  index.html  login.html  nav.html  order_history.html  order_histroy.html  otp.html  payment_failed.html  payment_success.html  paypal_redirect.html  product.html  product_list.html  profile.html  reg.html  save_product.html  search_results.html
ipn/: apps.py
myvenv/: pyvenv.cfg
project/: settings.py  urls.py  wsgi.py
static/css/: main.css
(+4 files in other folders)
