[tool.poetry]
name = "project"  # ✅ Change to match your package name
version = "0.1.0"
description = "My Django Project"
authors = ["Panchal Rudra M <your-email@example.com>"]
packages = [{ include = "project" }]  # ✅ Change to "project"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.6"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
requests = "^2.32.3"
sqlparse = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

